--- a/book-rating/src/app/dashboard/dashboard.component.html
+++ b/book-rating/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
 <br-book *ngFor="let b of books" [book]="b"></br-book>
+
+
+<ul>
+  <li *ngFor="let b of books">{{ b.title }}</li>
+</ul>
+
+<strong>Anzahl Bücher: {{ books.length }}</strong>
