--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -8,4 +8,9 @@
 <strong>Anzahl Bücher: {{ books.length }}</strong>
 
 
-
+<br-card>
+  <p>Yeah! Content!</p>
+  <br>
+  <br>
+  <strong>I'm a content creator!</strong>
+</br-card>
