--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -15,5 +15,10 @@
     </p>
 
     <span *ngFor="let x of getRating()">*</span>
+
+    <div>
+      <button class="btn btn-success mr-2" (click)="doRateUp()"> + </button>
+      <button class="btn btn-danger mr-2" (click)="doRateDown()"> – </button>
+    </div>
   </div>
 </div>
