--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -11,6 +11,10 @@
     </div>
 
     <p>
+      Preis: {{ book.price | currency:'EUR' }}
+    </p>
+
+    <p>
       {{ book.description }}
     </p>
 
