Routing: Children und Data

--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -1,3 +1,10 @@
+<a routerLink="foo">Foo</a><br>
+<a routerLink="bar">Bar</a><br>
+
+<div style="border: 2px solid red">
+  <router-outlet></router-outlet>
+</div>
+
 <ng-container *ngIf="books; else loading">
 
   <br-book
