--- a/book-rating/src/app/books/search/search.component.html
+++ b/book-rating/src/app/books/search/search.component.html
@@ -1,1 +1,3 @@
-<p>search works!</p>
+<form [formGroup]="searchForm" class="mt-5">
+  <input type="text" class="form-control form-control-lg" formControlName="search">
+</form>
