--- a/book-rating/src/app/app.component.html
+++ b/book-rating/src/app/app.component.html
@@ -5,6 +5,7 @@
     <a routerLink="/books" class="mr-5" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
     <a routerLink="/books/search" class="mr-5" routerLinkActive="active">Suche</a>
     <a routerLink="/books/create" class="mr-5" routerLinkActive="active">Erstellen</a>
+    <a routerLink="/books/counter" class="mr-5" routerLinkActive="active">Counter</a>
   </div>
 
   <router-outlet></router-outlet>
